...
                                <rect key="frame" x="20" y="122" width="374" height="40"/>
                                <color key="backgroundColor" red="0.12941176469999999" green="0.16862745100000001" blue="0.20392156859999999" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="MFc-NY-5me"/>
                                </constraints>
                                <color key="tintColor" red="0.92549019610000005" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="doneButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iWn-Nu-vTl"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jAW-Is-g0A">
                                <rect key="frame" x="20" y="733" width="374" height="50"/>
                                <color key="backgroundColor" red="0.20206409689999999" green="0.24922871590000001" blue="0.34056323770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Sign"/>
                                <connections>
                                    <segue destination="327-ni-BEd" kind="show" id="Q1Y-Gr-7Fz"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="weJ-tH-FYn">
                                <rect key="frame" x="20" y="791" width="374" height="50"/>
                                <color key="backgroundColor" red="0.20206409689999999" green="0.24922871590000001" blue="0.34056323770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="EFE-Lt-sNF"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Validate"/>
                                <connections>
                                    <segue destination="Uig-Sz-1jH" kind="show" id="2uW-5J-FOH"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="20" y="329" width="374" height="45"/>
                                <color key="backgroundColor" red="0.20206409689999999" green="0.24922871590000001" blue="0.34056323770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="0xq-IO-TDY"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Sign Message"/>
                                <connections>
                                    <action selector="signButtonTapped:" destination="327-ni-BEd" eventType="touchUpInside" id="7mh-OM-B2Y"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="20" y="329" width="374" height="45"/>
                                <color key="backgroundColor" red="0.20206409689999999" green="0.24922871590000001" blue="0.34056323770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="oNT-9G-BH6"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Validate Message"/>
                                <connections>
                                    <action selector="validateButtonTapped:" destination="Uig-Sz-1jH" eventType="touchUpInside" id="f8u-SQ-YD5"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
