//
//  EthereumWallet.swift
//  EthereumSigner
//
//  Created by OMER YASIN KOLKANAT on 7.04.2019.
//  Copyright © 2019 Omer Kolkanat. All rights reserved.
//

import Foundation

struct EthereumWallet {
    var address: String
    var balance: String
}
